ensure nav links are white to prevent bad contrast

--- a/app/assets/stylesheets/hera/modules/navigation/_navigation.scss
+++ b/app/assets/stylesheets/hera/modules/navigation/_navigation.scss
@@ -43,6 +43,7 @@
 
         .nav-link {
           align-items: center;
+          color: $white;
 
           &.dropdown-toggle::after {
             display: inline-block;
